# Pinaivu

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
contracts/: README.md
crates/blockchain-iface/: Cargo.toml
crates/blockchain-iface/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  payment.rs  types.rs
crates/context/: Cargo.toml
crates/context/src/: crypto.rs  lib.rs  session.rs  summariser.rs
crates/inference/: Cargo.toml
crates/inference/src/: bid.rs  lib.rs
crates/node/: Cargo.toml
crates/node/src/: api.rs  cli.rs  daemon.rs  identity.rs  main.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  lib.rs  service.rs
crates/p2p/tests/: two_node_discovery.rs
crates/reputation/: Cargo.toml
crates/reputation/src/: gossip.rs  lib.rs  local.rs  merkle.rs  store.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: adapter.rs  channel.rs  evm.rs  free.rs  lib.rs  receipt.rs  sui.rs
crates/storage/: Cargo.toml
crates/storage/src/: ipfs.rs  lib.rs
deploy/: install.sh  pinaivu.service
docs/: config.example.toml  node-operator-guide.md
landing-page/: tailwind.config.ts
landing-page/app/: globals.css  layout.tsx  page.tsx
landing-page/app/api/waitlist/: route.ts
programs/pinaivu/: Cargo.toml
programs/pinaivu/src/: error.rs  escrow.rs  lib.rs  registry.rs  score.rs  state.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  crypto.test.ts  crypto.ts  index.ts  session.test.ts  session.ts  types.ts
sdk/src/p2p/: index.ts  topics.ts
sdk/src/storage/: index.ts  local.ts  memory.test.ts  memory.ts  walrus.ts
