[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
toml        = { workspace = true }
prost       = { workspace = true }
tracing     = { workspace = true }

async-trait = { workspace = true }
tokio       = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
