[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
common           = { path = "../common" }
blockchain-iface = { path = "../blockchain-iface" }
inference        = { path = "../inference" }
async-trait      = { workspace = true }
anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
futures          = { workspace = true }
aes-gcm          = { workspace = true }
x25519-dalek     = { workspace = true }
rand             = { workspace = true }
sha2             = { workspace = true }
zeroize          = "1"
