[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
futures     = { workspace = true }
bytes       = { workspace = true }
tokio-util  = { workspace = true }
