[package]
name = "node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deai-node"
path = "src/main.rs"

[dependencies]
common           = { path = "../common" }
blockchain-iface = { path = "../blockchain-iface" }
p2p              = { path = "../p2p" }
inference        = { path = "../inference" }
context          = { path = "../context" }
storage          = { path = "../storage" }
async-trait      = { workspace = true }
anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
clap             = { workspace = true }
prometheus       = { workspace = true }
axum             = { workspace = true }
