[package]
name = "reputation"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
uuid          = { workspace = true }
tokio         = { workspace = true, features = ["full"] }
tempfile      = "3"
